--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -1,4 +1,4 @@
-name: client
+name: flutter_flash_event
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,10 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  dio: ^5.4.1
+  http: ^1.2.1
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
