--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/flash-event-logo.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
