--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   shared_preferences: ^2.0.6
   jwt_decode: ^0.3.1
   jwt_decoder: ^2.0.1
+  intl: ^0.17.0
+  web_socket_channel: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
