--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   jwt_decoder: ^2.0.1
   intl: ^0.17.0
   web_socket_channel: ^2.1.0
+  firebase_core: ^2.5.0
+  firebase_messaging: ^14.2.0
+  flutter_local_notifications: ^9.3.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
