--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_core: ^2.5.0
   firebase_messaging: ^14.2.0
   flutter_local_notifications: ^9.3.0
+  flutter_datetime_picker: ^1.5.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
