--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,18 @@
-name: CI
+name: Go CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        go-version: [1.20]
 
     steps:
     - name: Checkout code
@@ -18,10 +21,17 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.20
+        go-version: ${{ matrix.go-version }}
 
-    - name: Install dependencies
-      run: go mod tidy
+    - name: Get dependencies
+      run: |
+        go mod tidy
+        go mod download
+
+    - name: Build
+      run: go build -o main .
 
     - name: Run tests
-      run: go test -v ./test/...
+      run: go test ./... -v
+
+   
