--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.20
+        go-version: ${{ matrix.go-version }}
 
     - name: Get dependencies
       run: |
@@ -34,4 +34,4 @@ jobs:
     - name: Run tests
       run: go test ./... -v
 
-   
+    
