--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,16 +12,12 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [1.20]
+        go-version: [1.20]  # Utilisez une version valide ici
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
 
     - name: Get dependencies
       run: |
@@ -34,4 +30,4 @@ jobs:
     - name: Run tests
       run: go test ./... -v
 
-    
+   
