--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,33 +1,27 @@
-name: Go CI
+name: CI
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
   pull_request:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        go-version: [1.20]  # Utilisez une version valide ici
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16
 
-    - name: Get dependencies
-      run: |
-        go mod tidy
-        go mod download
-
-    - name: Build
-      run: go build -o main .
+    - name: Install dependencies
+      run: go mod tidy
 
     - name: Run tests
-      run: go test ./... -v
-
-   
+      run: go test -v ./...
