--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        go-version: [1.20]
+        go-version: [1.20]  # You can add more versions here (e.g., [1.18, 1.19, 1.20])
 
     steps:
     - name: Checkout code
@@ -29,15 +29,17 @@ jobs:
     - name: Get dependencies
       run: |
         cd backend
-        go mod tidy
-        go mod download
+        go mod tidy  # Clean up unused dependencies
+        go mod download  # Download required dependencies
 
     - name: Build
       run: |
         cd backend
-        go build -o main .
+        go build -o main .  # Build the application
 
     - name: Run tests
       run: |
         cd backend
-        go test ./... -v
+        go test ./... -v  # Run tests with verbosity
+
+   
