--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,45 +1,35 @@
-name: Go CI
+name: Go
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
 
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.20]
+        go-version: [ '1.19', '1.20', '1.21.x' ]
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
+      - name: Setup Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v5
+        with:
+          go-version: ${{ matrix.go-version }}
 
-    - name: Change directory to backend
-      run: cd backend
+      - name: Display Go version
+        run: go version
 
-    - name: Get dependencies
-      run: |
-        cd backend
-        go mod tidy
-        go mod download
+      - name: Change to backend directory
+        run: cd backend
 
-    - name: Build
-      run: |
-        cd backend
-        go build -o main .
+      - name: Install dependencies
+        run: |
+          cd backend
+          go mod tidy
 
-    - name: Run tests
-      run: |
-        cd backend
-        go test ./... -v
-
-   
+      - name: Run tests
+        run: |
+          cd backend
+          go test ./...
