--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ '1.19', '1.20', '1.21.x' ]
+        go-version: ['1.19', '1.20', '1.21.x']
 
     steps:
       - uses: actions/checkout@v4
@@ -31,5 +31,5 @@ jobs:
 
       - name: Run tests
         run: |
-          cd backend/test
-          go test ./...
+          cd backend
+          go test ./test/...
