--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,18 +4,20 @@ on:
   push:
     branches: [main]
   pull_request:
-    
     branches: [main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 10  # Augmentez la limite de temps à 10 minutes
+
     strategy:
       matrix:
         go-version: ['1.19', '1.20', '1.21.x']
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
       - name: Setup Go
         uses: actions/setup-go@v5
@@ -26,9 +28,15 @@ jobs:
         run: go version
 
       - name: Install dependencies
-        run: go mod tidy
+        run: |
+          echo "Running go mod tidy"
+          go mod tidy
         working-directory: ./backend
 
       - name: Run tests
-        run: go test ./test/...
+        run: |
+          echo "Running tests"
+          go test -v ./test/...
         working-directory: ./backend
+
+    
