--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,26 @@
+Skip to content
+Navigation Menu
+Ricardogn224
+/
+FlashEvent
+
+Type / to search
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+2
+Insights
+Settings
+Go CI
+fix conflit and bottom nav #47
+Jobs
+Run details
+Workflow file for this run
+.github/workflows/ci.yml at 360bdb5
 name: Go CI
 
 on:
@@ -25,7 +48,6 @@ jobs:
           go-version: ${{ matrix.go-version }}
 
       - name: Display Go version
-      
         run: go version
 
       - name: Install dependencies
