--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-
 name: Go CI
 
 on:
@@ -10,7 +9,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    timeout-minutes: 10  # Augmentez la limite de temps à 10 minutes
+    timeout-minutes: 20  # Augmentez la limite de temps à 20 minutes
 
     strategy:
       matrix:
@@ -34,10 +33,12 @@ jobs:
           go mod tidy
         working-directory: ./backend
 
+      - name: List files
+        run: ls -al
+        working-directory: ./backend
+
       - name: Run tests
         run: |
           echo "Running tests"
-          go test -v ./test/...
+          go test -v -timeout 10m ./test/...
         working-directory: ./backend
-
-    
