--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,8 +22,4 @@ jobs:
 
       - name: Connect to server and deploy backend
         run: |
-          sshpass -p ${{ secrets.SSH_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_IP }} 
-            cd FlashEvent/backend
-            git pull
-            docker-compose build --no-cache
-            docker-compose up -d
+          sshpass -p ${{ secrets.SSH_PASSWORD }} ssh -o StrictHostKeyChecking=no ${{ secrets.SSH_USERNAME }}@${{ secrets.SSH_IP }}  "cd ~/FlashEvent/backend/ && git pull && docker-compose build --no-cache && docker-compose up -d "
