--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,3 +30,16 @@ services:
     environment:
       - DATABASE_URL=postgresql://janire:password@database:5432/articlesDB
     restart: always
+
+  web:
+    container_name: web
+    image: nginx:latest
+    ports:
+      - "8005:80"
+    volumes:
+      - ./web:/usr/share/nginx/html
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./apk:/usr/share/nginx/html/apk
+    depends_on:
+      - backend
+    restart: always
