mise en prod, creation d'un service web pour l'admin, generation et mise à jour de l'apk sur l'url a chaque build

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,3 +43,15 @@ services:
     depends_on:
       - backend
     restart: always
+
+  flutter:
+    container_name: flutter
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ./apk:/usr/share/nginx/html/apk
+      - ./web:/usr/share/nginx/html
+    depends_on:
+      - backend
+    restart: always
