--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,5 +52,4 @@ jobs:
             docker-compose build --no-cache &&
             docker-compose up -d &&
             cp client/build/app/outputs/flutter-apk/app-release.apk ~/FlashEvent/apk/ &&
-            cp -r client/build/web/* ~/FlashEvent/web/
-        "
+            cp -r client/build/web/* ~/FlashEvent/web/"
