--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  dio: ^5.4.1
+  dio: ^5.5.0+1
   http: ^1.2.1
   flutter_bloc: ^8.1.5
   bloc: ^8.0.0
