--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,11 @@ services:
     environment:
       - DATABASE_URL=postgresql://janire:password@database:5432/articlesDB
     restart: always
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   web:
     container_name: web
@@ -44,4 +49,11 @@ services:
       - backend
     restart: always
 
-  
+  log-viewer:
+    image: develar/logviewer
+    container_name: log-viewer
+    ports:
+      - "9000:9000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    restart: unless-stopped
