make log consultable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,11 +30,6 @@ services:
     environment:
       - DATABASE_URL=postgresql://janire:password@database:5432/articlesDB
     restart: always
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
 
   web:
     container_name: web
@@ -49,11 +44,16 @@ services:
       - backend
     restart: always
 
-  log-viewer:
-    image: develar/logviewer
-    container_name: log-viewer
-    ports:
-      - "9000:9000"
+  portainer:
+    image: portainer/portainer-ce
+    container_name: portainer
+    command: -H unix:///var/run/docker.sock
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+    ports:
+      - "9000:9000"
     restart: unless-stopped
+
+volumes:
+  portainer_data:
