--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -52,5 +52,5 @@ jobs:
             cp client/build/app/outputs/flutter-apk/app-release.apk ~/FlashEvent/apk/ &&
             cp -r client/build/web/* ~/FlashEvent/web/" &&
             docker-compose build --no-cache &&
-            docker-compose up -d "
-            
+            docker-compose up -d 
+
